The content-width constant data has been corrected according to the layout and paddings have been added for the main page containers. The footer-content-width constant has been resetted by content-width constants in the root. Page-container class added to the section wrapped all the page contant for the main and portfolio pages. The page-width has been set for the hero-img section and footer section. The footer padding has been added for the footer container.

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,8 +28,10 @@
     --header-logo-line-height: 1.33;
     --footer-logo-line-height: 1.17;
     --page-width: 1440px;
-    --content-width: 1128px;
+    --content-width: 1158px;
     --feature-width: 264px;
+    --footer-content-width: var(--feature-width);
+    --footer-padding-gap: 156px;
     --padding-gap: 24px;
     --hero-container-gap: 188px;
     --card-shadow: 2px 0px 2px rgba(0, 0, 0, 0.12),
@@ -64,7 +66,7 @@ ul {
   list-style: none; 
 } 
 
-/* Reset external indents */
+/* Reset external in--content-widthdents */
 h1, 
 h2,
 h3, 
@@ -108,23 +110,25 @@ body {
     font-size: var(--regular-font-size);
     font-weight: var(--header3-font-weight);
     /* line-height: var(--text-line-height); */
-    letter-spacing: 0.02em;
+    letter-spacing: 0.02em; 
 }
 
  main {
     flex: 1 0 auto;
     font-display: swap;
  }
-
+.page-container {
+    outline: 1px solid teal;
+    margin: 0 auto;
+    width: var(--page-width);
+}
  /* Container */
 .container {
     align-items: center;
-    width: var(--page-width);
+    width: var(--content-width);
     flex: 0 0 auto;
     margin: 0 auto;
-    padding-left: calc(6.5 * var(--padding-gap));
-    padding-right: calc(6.5 * var(--padding-gap));
-    outline: 3px solid teal;
+    /* outline: 3px solid teal; */
 }
  
 /* .section,
@@ -142,11 +146,10 @@ div.footer.section {
 .header .container {
     display:flex;
     justify-content: space-between;
-    /* width: var(--page-width); */
     background-color: var(--primary-white-color);
     border-radius: 1px;
     border-color: var(--white-text-color);
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
 }
 
 .page-nav {
@@ -229,9 +232,13 @@ div.footer.section {
   /* Hero-img container */
  .hero-img .container,
  .footer .container {
+    width: var(--page-width);
     background-color: var(--dark-background-color);
  }
 
+ .footer .container {
+    padding-left: var(--footer-padding-gap);
+ }
 
  .hero-msg {
     padding-top: var(--hero-container-gap);
@@ -284,10 +291,11 @@ ul.container.imgs,
 ul.container.team {
     display: flex;
     margin-left: 0px;
-    padding-left: 0px;
+    margin-right: 0px;
+    padding-left: 15px;
+    padding-right: 15px;
     justify-content: space-between;
-    /* width: var(--content-width); */
-    width: 1128px;
+    width: var(--content-width);
 }
 
 li.feature.list {
@@ -304,22 +312,19 @@ ul.container.features {
     flex-basis: calc(100% / 4);
     padding-top: calc(7 * var(--padding-gap));
     padding-bottom: calc(3.25 * var(--padding-gap));
-    padding-right: 0px;
-    outline: 1px solid teal;
+    /* outline: 1px solid teal; */
 }
 
 .container.imgs,
 .rows-container {
     flex-basis: calc(100% / 3);
-    padding-right: 0px;
-    outline: 1px solid blue;
+    /* outline: 1px solid blue; */
 }
 
 ul.container.team {
     flex-basis: calc(100% / 4);
-    padding-right: 0px;
     padding-bottom: calc(10px + 6 * var(--padding-gap));
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 .h3header {
@@ -347,7 +352,7 @@ ul.container.team {
 } */
 
 /* Our team section */
-.section-team .container {
+.section-team.page-container {
     background-color: var(--white-title-text-color);
 }
 
@@ -422,7 +427,7 @@ ul.logo-footer.list {
 }
 
 .footer-content {
-    width: var(--feature-width);
+    width: var(--footer-content-width);
     color: var(--white-text-color);
     font-size: var(--regular-font-size);
     font-weight: var(--text-font-weight);
@@ -438,7 +443,7 @@ ul.logo-footer.list {
 .filters-container.top {
     margin: 89px auto 71px;
     width: 586px;
-    outline: 1px solid tomato;
+    /* outline: 1px solid tomato; */
 }
 
 .filters {
@@ -503,14 +508,14 @@ ul.rows-container {
     margin-right: 24px;
 } 
 
-.item-cotainer.list {
-    outline: 2px solid tomato;
+.item-cotainer.list {   
     width: 360px;
     margin-bottom: 0px;
     border-bottom-width: 5px;
     border-bottom-color: E7E9FC;
     border-bottom-color: #4D5AE5;
     background-color: var(--primary-white-color);
+    /* outline: 2px solid tomato; */
 }
 
 .card-descript.list {
